deps/v8/test/message/fail/json-stringify-circular-ellipsis.out
*%(basename)s:27: TypeError: Converting circular structure to JSON
    --> starting at object with constructor 'Object'
    |     property 'first' -> object with constructor 'Outer'
    |     property 'x' -> object with constructor 'ArrayHolder'
    |     ...
    |     index 1 -> object with constructor 'Inner'
    --- property 'y' closes the circle
JSON.stringify(root);
     ^
TypeError: Converting circular structure to JSON
    --> starting at object with constructor 'Object'
    |     property 'first' -> object with constructor 'Outer'
    |     property 'x' -> object with constructor 'ArrayHolder'
    |     ...
    |     index 1 -> object with constructor 'Inner'
    --- property 'y' closes the circle
    at JSON.stringify (<anonymous>)
    at *%(basename)s:27:6

